# epistemic-factkg

./: .gitignore  CITATION.cff  Justfile  LICENSE  README.md  averitec_validation_summary.json  pyproject.toml  pytest.ini  runner.py  temp.py  test_semantic_data_source.py
.claude/: settings.local.json
app/: __init__.py  _constants.py  _css.py  _loaders.py  _state.py  _ui.py  app.py  config.py  predictor.py
app/core/: loaders.py  predictor.py  state.py  tab.py  ui.py  widgets.py
app/style/: style.css
app/tabs/: __init__.py  data.py  evaluate.py  reference.py  registry.py  reports.py  verify.py
app_update/: app.py  config.py
app_update/core/: loaders.py  predictor.py  state.py  tab.py  ui.py  widgets.py
app_update/style/: __init__.py
app_update/tabs/: __init__.py  dataset.py
configs/: ai2thor_default.yaml  config.yaml
configs/hparams/: baseline_best_hparams.json  v1-hgnn_best_hparams.json  v2-hgnn_best_hparams.json  v3-nli_best_hparams.json
data/probes/: epistemic_probes.jsonl
data/registry/: seed_pool.jsonl  source_trust_registry.jsonl
data/schema/: unified_example.json  unified_schema.json
data/summary/: validation_phase4.json
docs/: conclusions.md  data-flow.md  epistemic-framework.md  evidence-labeling.md  folder-structure-proposal.md  labeling_guide.md  model-evolution.md  phase4-implementation.md  phase5-ablation.md  phase6-evaluation.md  project-plan.md  research-overview.md  source-guide.md  synthetic-data.md
docs/adr/: 001-epistemic-framework.md  001-pramana-epistemic-framework.md  002-ports-and-adapters-architecture.md  002-unified-schema-v2-null-tolerant.md  003-floorplan-based-train-test-split.md  003-ports-and-adapters-architecture.md  004-gnn-unification-at-epistemic-layer.md  004-rdf-as-kg-intermediate-format.md  005-anupalabdhi-distinct-from-not-enough-evidence.md  005-exclude-postulation-derivation-from-training.md  006-dataset-composition-and-generation-strategy.md  006-diminishing-returns-combination-formula.md  007-heuristic-epistemic-labeling.md  007-verdict-class-reduction.md  008-evaluation-protocol.md  008-heuristic-prior-weight-values.md  009-floorplan-based-train-test-split.md  009-source-trust-registry.md  010-per-evidence-epistemic-modeling.md  010-rdf-as-kg-intermediate-format.md  (+34 more)
notebooks/: 01_eda_phase4.ipynb  02_experiment.ipynb  hparam_colab.ipynb
scripts/: build_data.py  dataset_check.py  dataset_generate.py  dataset_validate.py  enrich_registry.py  kg_generate.py  kg_visualize.py  run_pipeline.py  semantic_test.py
src/model/: config.py  (+1 more)
tests/: README.md  conftest.py  test_converters.py  test_data_source.py  test_exceptions.py  test_gnn_model.py  test_graph_builder.py  test_metrics.py  test_project_status.py  test_source_coverage.py  test_synthetic.py  test_trainer.py  test_validators.py
unified/: averitec_dev_unified.jsonl
(+301 files in other folders)
