[project]
name = "epistemic-factkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ai2thor>=5.0.0",
    "inflect>=7.5.0",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "owlrl>=7.1.4",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "sentence-transformers>=5.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
