[project]
name = "epistemic-factkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ai2thor>=5.0.0",
    "inflect>=7.5.0",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "owlrl>=7.1.4",
    "pandas>=2.2.0",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.57.0",
    "torch>=2.3.0",
    "torch-geometric>=2.6.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
